add some functionality

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
   <title>Document</title>
 </head>
 <body>
+  <form action="">
+    <input type="text" class="textBox">
+    <button class="btn2">Click Me Too</button>
+  </form>
+  <!-- <div class="div1">
+    <h2>dif</h2>
+  </div> -->
  
   
 <script src="assets/js/main.js"></script>
