add random color function

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <input type="text" class="textBox">
     <button class="btn2">Click Me Too</button>
   </form>
-  <!-- <div class="div1">
-    <h2>dif</h2>
-  </div> -->
+  <p>Never tell me the odds!</p>
  
   
 <script src="assets/js/main.js"></script>
