--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <button class="btn2">Click Me Too</button>
   </form>
   <p>Never tell me the odds!</p>
+  <button id="btnArray">Click Click Boom!</button>
+  <ul>
+
+  </ul>
  
   
 <script src="assets/js/main.js"></script>
